newclay/test/Compiler/Propagation/Fail/RefLocal3/main.clay

define main;
overload main() {
    var x = true;
    return const x;
}

